verik-importer/src/main/gen/io/verik/importer/antlr/SystemVerilogParser.java
// Generated from /Users/francis/Documents/Work/Verik/git.nosync/verik/verik-importer/src/main/gen/io/verik/importer/antlr/SystemVerilogParser.g4 by ANTLR 4.9.2
package io.verik.importer.antlr;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SystemVerilogParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EQ=1, COMMA=2, COLON=3, SEMICOLON=4, UNDERSCORE=5, LBRACK=6, RBRACK=7, 
		LPAREN=8, RPAREN=9, LPAREN_STAR=10, RPAREN_STAR=11, ENDMODULE=12, INPUT=13, 
		LOGIC=14, MODULE=15, OUTPUT=16, SIGNED=17, UNSIGNED=18, WIRE=19, UNSIGNED_NUMBER=20, 
		STRING_LITERAL=21, SIMPLE_IDENTIFIER=22, WS=23;
	public static final int
		RULE_compilationUnit = 0, RULE_description = 1, RULE_moduleNonAnsiHeader = 2, 
		RULE_moduleAnsiHeader = 3, RULE_moduleDeclaration = 4, RULE_listOfPorts = 5, 
		RULE_listOfPortDeclarations = 6, RULE_portDeclaration = 7, RULE_port = 8, 
		RULE_portExpression = 9, RULE_portReference = 10, RULE_portDirection = 11, 
		RULE_netPortHeader = 12, RULE_ansiPortDeclaration = 13, RULE_moduleItem = 14, 
		RULE_packageItem = 15, RULE_packageOrGenerateItemDeclaration = 16, RULE_inputDeclaration = 17, 
		RULE_outputDeclaration = 18, RULE_dataDeclaration = 19, RULE_dataType = 20, 
		RULE_dataTypeOrImplicit = 21, RULE_implicitDataType = 22, RULE_integerType = 23, 
		RULE_integerVectorType = 24, RULE_netType = 25, RULE_netPortType = 26, 
		RULE_variablePortType = 27, RULE_varDataType = 28, RULE_signing = 29, 
		RULE_simpleType = 30, RULE_listOfVariableDeclAssignments = 31, RULE_variableDeclAssignment = 32, 
		RULE_packedDimension = 33, RULE_constantExpression = 34, RULE_constantRange = 35, 
		RULE_constantPrimary = 36, RULE_primaryLiteral = 37, RULE_number = 38, 
		RULE_integralNumber = 39, RULE_decimalNumber = 40, RULE_identifier = 41;
	private static String[] makeRuleNames() {
		return new String[] {
			"compilationUnit", "description", "moduleNonAnsiHeader", "moduleAnsiHeader", 
			"moduleDeclaration", "listOfPorts", "listOfPortDeclarations", "portDeclaration", 
			"port", "portExpression", "portReference", "portDirection", "netPortHeader", 
			"ansiPortDeclaration", "moduleItem", "packageItem", "packageOrGenerateItemDeclaration", 
			"inputDeclaration", "outputDeclaration", "dataDeclaration", "dataType", 
			"dataTypeOrImplicit", "implicitDataType", "integerType", "integerVectorType", 
			"netType", "netPortType", "variablePortType", "varDataType", "signing", 
			"simpleType", "listOfVariableDeclAssignments", "variableDeclAssignment", 
			"packedDimension", "constantExpression", "constantRange", "constantPrimary", 
			"primaryLiteral", "number", "integralNumber", "decimalNumber", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "','", "':'", "';'", "'_'", "'['", "']'", "'('", "')'", 
			"'(*'", "'*)'", "'endmodule'", "'input'", "'logic'", "'module'", "'output'", 
			"'signed'", "'unsigned'", "'wire'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "EQ", "COMMA", "COLON", "SEMICOLON", "UNDERSCORE", "LBRACK", "RBRACK", 
			"LPAREN", "RPAREN", "LPAREN_STAR", "RPAREN_STAR", "ENDMODULE", "INPUT", 
			"LOGIC", "MODULE", "OUTPUT", "SIGNED", "UNSIGNED", "WIRE", "UNSIGNED_NUMBER", 
			"STRING_LITERAL", "SIMPLE_IDENTIFIER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SystemVerilogParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SystemVerilogParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CompilationUnitContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SystemVerilogParser.EOF, 0); }
		public List<DescriptionContext> description() {
			return getRuleContexts(DescriptionContext.class);
		}
		public DescriptionContext description(int i) {
			return getRuleContext(DescriptionContext.class,i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).exitCompilationUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilogParserVisitor ) return ((SystemVerilogParserVisitor<? extends T>)visitor).visitCompilationUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LBRACK) | (1L << LOGIC) | (1L << MODULE) | (1L << SIGNED) | (1L << UNSIGNED) | (1L << SIMPLE_IDENTIFIER))) != 0)) {
				{
				{
				setState(84);
				description();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescriptionContext extends ParserRuleContext {
		public ModuleDeclarationContext moduleDeclaration() {
			return getRuleContext(ModuleDeclarationContext.class,0);
		}
		public PackageItemContext packageItem() {
			return getRuleContext(PackageItemContext.class,0);
		}
		public DescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).enterDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).exitDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilogParserVisitor ) return ((SystemVerilogParserVisitor<? extends T>)visitor).visitDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescriptionContext description() throws RecognitionException {
		DescriptionContext _localctx = new DescriptionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_description);
		try {
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MODULE:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				moduleDeclaration();
				}
				break;
			case LBRACK:
			case LOGIC:
			case SIGNED:
			case UNSIGNED:
			case SIMPLE_IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				packageItem();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleNonAnsiHeaderContext extends ParserRuleContext {
		public TerminalNode MODULE() { return getToken(SystemVerilogParser.MODULE, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ListOfPortsContext listOfPorts() {
			return getRuleContext(ListOfPortsContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(SystemVerilogParser.SEMICOLON, 0); }
		public ModuleNonAnsiHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleNonAnsiHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).enterModuleNonAnsiHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).exitModuleNonAnsiHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilogParserVisitor ) return ((SystemVerilogParserVisitor<? extends T>)visitor).visitModuleNonAnsiHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleNonAnsiHeaderContext moduleNonAnsiHeader() throws RecognitionException {
		ModuleNonAnsiHeaderContext _localctx = new ModuleNonAnsiHeaderContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_moduleNonAnsiHeader);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(MODULE);
			setState(97);
			identifier();
			setState(98);
			listOfPorts();
			setState(99);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleAnsiHeaderContext extends ParserRuleContext {
		public TerminalNode MODULE() { return getToken(SystemVerilogParser.MODULE, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(SystemVerilogParser.SEMICOLON, 0); }
		public ListOfPortDeclarationsContext listOfPortDeclarations() {
			return getRuleContext(ListOfPortDeclarationsContext.class,0);
		}
		public ModuleAnsiHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleAnsiHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).enterModuleAnsiHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).exitModuleAnsiHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilogParserVisitor ) return ((SystemVerilogParserVisitor<? extends T>)visitor).visitModuleAnsiHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleAnsiHeaderContext moduleAnsiHeader() throws RecognitionException {
		ModuleAnsiHeaderContext _localctx = new ModuleAnsiHeaderContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_moduleAnsiHeader);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(MODULE);
			setState(102);
			identifier();
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(103);
				listOfPortDeclarations();
				}
			}

			setState(106);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleDeclarationContext extends ParserRuleContext {
		public ModuleNonAnsiHeaderContext moduleNonAnsiHeader() {
			return getRuleContext(ModuleNonAnsiHeaderContext.class,0);
		}
		public TerminalNode ENDMODULE() { return getToken(SystemVerilogParser.ENDMODULE, 0); }
		public List<ModuleItemContext> moduleItem() {
			return getRuleContexts(ModuleItemContext.class);
		}
		public ModuleItemContext moduleItem(int i) {
			return getRuleContext(ModuleItemContext.class,i);
		}
		public ModuleAnsiHeaderContext moduleAnsiHeader() {
			return getRuleContext(ModuleAnsiHeaderContext.class,0);
		}
		public ModuleDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).enterModuleDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).exitModuleDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilogParserVisitor ) return ((SystemVerilogParserVisitor<? extends T>)visitor).visitModuleDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleDeclarationContext moduleDeclaration() throws RecognitionException {
		ModuleDeclarationContext _localctx = new ModuleDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_moduleDeclaration);
		int _la;
		try {
			setState(120);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				moduleNonAnsiHeader();
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==INPUT || _la==OUTPUT) {
					{
					{
					setState(109);
					moduleItem();
					}
					}
					setState(114);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(115);
				match(ENDMODULE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				moduleAnsiHeader();
				setState(118);
				match(ENDMODULE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListOfPortsContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(SystemVerilogParser.LPAREN, 0); }
		public List<PortContext> port() {
			return getRuleContexts(PortContext.class);
		}
		public PortContext port(int i) {
			return getRuleContext(PortContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(SystemVerilogParser.RPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(SystemVerilogParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SystemVerilogParser.COMMA, i);
		}
		public ListOfPortsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listOfPorts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).enterListOfPorts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).exitListOfPorts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilogParserVisitor ) return ((SystemVerilogParserVisitor<? extends T>)visitor).visitListOfPorts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListOfPortsContext listOfPorts() throws RecognitionException {
		ListOfPortsContext _localctx = new ListOfPortsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_listOfPorts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(LPAREN);
			setState(123);
			port();
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(124);
				match(COMMA);
				setState(125);
				port();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListOfPortDeclarationsContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(SystemVerilogParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(SystemVerilogParser.RPAREN, 0); }
		public List<AnsiPortDeclarationContext> ansiPortDeclaration() {
			return getRuleContexts(AnsiPortDeclarationContext.class);
		}
		public AnsiPortDeclarationContext ansiPortDeclaration(int i) {
			return getRuleContext(AnsiPortDeclarationContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SystemVerilogParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SystemVerilogParser.COMMA, i);
		}
		public ListOfPortDeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listOfPortDeclarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).enterListOfPortDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).exitListOfPortDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilogParserVisitor ) return ((SystemVerilogParserVisitor<? extends T>)visitor).visitListOfPortDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListOfPortDeclarationsContext listOfPortDeclarations() throws RecognitionException {
		ListOfPortDeclarationsContext _localctx = new ListOfPortDeclarationsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_listOfPortDeclarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(LPAREN);
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LBRACK) | (1L << INPUT) | (1L << LOGIC) | (1L << OUTPUT) | (1L << SIGNED) | (1L << UNSIGNED) | (1L << WIRE) | (1L << SIMPLE_IDENTIFIER))) != 0)) {
				{
				setState(134);
				ansiPortDeclaration();
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(135);
					match(COMMA);
					setState(136);
					ansiPortDeclaration();
					}
					}
					setState(141);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(144);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PortDeclarationContext extends ParserRuleContext {
		public InputDeclarationContext inputDeclaration() {
			return getRuleContext(InputDeclarationContext.class,0);
		}
		public OutputDeclarationContext outputDeclaration() {
			return getRuleContext(OutputDeclarationContext.class,0);
		}
		public PortDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_portDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).enterPortDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).exitPortDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilogParserVisitor ) return ((SystemVerilogParserVisitor<? extends T>)visitor).visitPortDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PortDeclarationContext portDeclaration() throws RecognitionException {
		PortDeclarationContext _localctx = new PortDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_portDeclaration);
		try {
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INPUT:
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				inputDeclaration();
				}
				break;
			case OUTPUT:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				outputDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PortContext extends ParserRuleContext {
		public PortExpressionContext portExpression() {
			return getRuleContext(PortExpressionContext.class,0);
		}
		public PortContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_port; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).enterPort(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).exitPort(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilogParserVisitor ) return ((SystemVerilogParserVisitor<? extends T>)visitor).visitPort(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PortContext port() throws RecognitionException {
		PortContext _localctx = new PortContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_port);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			portExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PortExpressionContext extends ParserRuleContext {
		public PortReferenceContext portReference() {
			return getRuleContext(PortReferenceContext.class,0);
		}
		public PortExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_portExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).enterPortExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).exitPortExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilogParserVisitor ) return ((SystemVerilogParserVisitor<? extends T>)visitor).visitPortExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PortExpressionContext portExpression() throws RecognitionException {
		PortExpressionContext _localctx = new PortExpressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_portExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			portReference();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PortReferenceContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public PortReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_portReference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).enterPortReference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).exitPortReference(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilogParserVisitor ) return ((SystemVerilogParserVisitor<? extends T>)visitor).visitPortReference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PortReferenceContext portReference() throws RecognitionException {
		PortReferenceContext _localctx = new PortReferenceContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_portReference);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PortDirectionContext extends ParserRuleContext {
		public TerminalNode INPUT() { return getToken(SystemVerilogParser.INPUT, 0); }
		public TerminalNode OUTPUT() { return getToken(SystemVerilogParser.OUTPUT, 0); }
		public PortDirectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_portDirection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).enterPortDirection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SystemVerilogParserListener ) ((SystemVerilogParserListener)listener).exitPortDirection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SystemVerilogParserVisitor ) return ((SystemVerilogParserVisitor<? extends T>)visitor).visitPortDirection(this);
			else return visitor.visitChildren(this);
		}
	}
